Fix sidebar visibility

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -144,16 +144,12 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: 0;
   bottom: 0;
-  left: -14rem;
   width: 13rem;
-  visibility: hidden;
   overflow-y: auto;
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-size: .875rem; /* 15px */
   color: rgba(255,255,255,.6);
   background-color: #202020;
-  -webkit-transition: all .3s ease-in-out;
-          transition: all .3s ease-in-out;
 }
 @media (min-width: 30em) {
   .sidebar {
